tests/ui/g-route-passive-first-visible-ambiguous.stderr
error[E0080]: evaluation panicked: Route unprojectable for this role: invalid, ambiguous endpoint operation, or non-deterministic first-visible route frontier
 --> src/g.rs
  |
  |             panic_choreography_error(error);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::ProgramProjection::<hibana::g::Route<hibana::g::Send<0, 1, hibana::g::Msg<9, ()>>, hibana::g::Send<0, 1, hibana::g::Msg<9, ()>>>>::VALIDATION` failed inside this call
  |
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  |           $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/g.rs
  |
  |           ProgramSourceError::ProjectionRouteUnprojectable => panic!(concat!(
  |  _____________________________________________________________-
  | |             "Route unprojectable for this role: invalid, ambiguous endpoint operation, ",
  | |             "or non-deterministic first-visible route frontier",
  | |         )),
  | |__________- in this macro invocation

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |         let () = Self::VALIDATION;
  |                  ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |             &ProgramProjection::<Steps>::PROGRAM_REF,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |     &RoleProjection::<ROLE, Steps>::IMAGE_REF
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g.rs
  |
  |       let image = const {
  |  _________________^
  | |         if ROLE >= ROLE_DOMAIN_SIZE {
  | |             panic!("{}", ROLE_INDEX_ERROR);
... |
  | |     };
  | |_____^

note: the above error was encountered while instantiating `fn g::project::<1, Route<hibana::g::Send<0, 1, Msg<9, ()>>, hibana::g::Send<0, 1, Msg<9, ()>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
